<resources>
    <string name="app_name">InvenTracker</string>
    <string name="action_settings">Settings</string>
    <string name="inventracker_inventory_tracking">Inventory Tracking and Management System</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_view_inventory">View Inventory</string>
    <string name="button_text_login">Login</string>
    <string name="tracking">Tracking</string>
    <string name="inventory">Inventory</string>
    <string name="warehouse">Warehouse</string>
    <string name="warehouses">Warehouses</string>
    <string name="product_models">Product Models</string>
    <string name="products">Products</string>
    <string name="users">Users</string>
    <string name="product_categories">Product Categories</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="display_item_number">Item #:</string>
    <string name="display_model_number">Model #:</string>
    <string name="display_warehouse">Warehouse:</string>
    <string name="display_category">Category:</string>
    <string name="display_arrived">Arrived:</string>
    <string name="display_size">Size:</string>
    <string name="display_available">Available:</string>
    <string name="display_qty">Qty:</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="categories">Categories</string>
    <string name="view_product_models">View Products</string>
    <string name="model_number_lookup">Lookup</string>
    <string name="product_models_home">Product Models Home</string>
    <string name="product_model_quantities">Product Model Quantities</string>
    <string name="add_item">Add Item</string>
    <string name="mock_product_model_name">Washing Machine - Stainless Steel</string>
    <string name="mock_product_model_number">1234</string>
    <string name="mock_category_name">Washing Machine</string>
    <string name="mock_warehouse_name">Winnipeg</string>
    <string name="mock_quantity">34</string>
    <string name="mock_size">10</string>
    <string name="mock_capacity">1000</string>
    <string name="space_in_use_label">Space in Use:</string>
    <string name="mock_space_in_use">150</string>
    <string name="capacity_label">Capacity:</string>
    <string name="mock_percent">15%</string>
    <string name="mock_arrival_date">June 3, 2023</string>
    <string name="add_product_model">Add Product Model</string>
    <string name="warehouse_id">Warehouse ID</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="model_number">Model Number</string>
    <string name="remove_item">Remove Item</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="db">db</string>
    <string name="storage_size">Storage Size:</string>
    <string name="view_categories">View Categories</string>
    <string name="admin">Admin</string>
    <string name="input_category_information">Input Category Information</string>
    <string name="product_order">Product Order</string>
    <string name="product_model_id">Product Model ID</string>
    <string name="product_name">Product Name</string>
    <string name="category_id">Category ID</string>
    <string name="cost">Cost</string>
    <string name="msrp">MSRP</string>
    <string name="Input_Product_Information">Input Product Information</string>
    <string name="storage_space" >Storage Space</string>
    <string name="category_name" >Category Name</string>
    <string name="warehouse_address" >Address </string>
    <string name="add_warehouse">Warehouse Information</string>
    <string name="warehouse_capacity">Capacity </string>
    <string name="add_user" >Enter new user login information</string>
    <string name="password_hash">Enter a Password</string>
    <string name="password_salt">Enter random encryption value</string>
    <string name="register">Register</string>
    <string name="registration_details">Registration Details</string>
    <string name="confirm_registration">Confirm Registration</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password_msg">New Password must be at least 4 characters.</string>
    <string name="update_account">Update Account</string>
    <string name="logout">Logout</string>
    <string name="account_verification">Account Verification</string>
    <string name="old_password">Old Password</string>
    <string name="updated_password">Updated Password</string>
    <string name="new_password">New Password</string>
    <string name="is_admin">Is Admin?</string>
    <string name="new_username_msg">Username must be at least 4 characters.</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="reset">Reset</string>
    <string name="edit_warehouse">Update Warehouse</string>
    <string name="warehouse_info">Warehouse Information</string>
    <string name="mock_item_id">123456</string>
    <string name="max_price">Max Price</string>
    <string name="range">-</string>
    <string name="min_price">Min Price</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="price">Price</string>
    <string name="mock_msrp">$100.00</string>
    <string name="search_results">Search Results</string>
    <string name="move">move</string>
    <string name="move_item">Move Item</string>
    <string name="include_out_of_stock">Include Out of Stock</string>
    <string name="availability">Availability</string>
    <string name="view_warehouses">View Warehouses</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="product_search">Product Search</string>

</resources>