<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Home.RelativeLayout"
    tools:context="comp3350.inventracker.ui.PasswordUpdateActivity">
    
    <LinearLayout style="@style/LinearLayoutContent">
        <TextView
            android:id="@+id/textTitle"
            style="@style/HomePageHeader"
            android:text="@string/change_password" />
    </LinearLayout>
    
    <LinearLayout style="@style/LinearLayoutCenteredVertical.Input">
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
    
            <TableRow>
                <TextView
                    style="@style/SubHeader"
                    android:text="@string/account_verification"
                    android:layout_span="12" />
    
            </TableRow>
    
            <TableRow>
                <TextView
                    style="@style/TableRow.Large.Value"
                    android:text="@string/old_password"
                    android:layout_span="6"
                    android:labelFor="@id/oldPassword"/>
        
                <EditText
                    style="@style/TableRow.Large.Input"
                    android:id="@+id/oldPassword"
                    android:inputType="textPassword"
                    android:layout_span="6"
                    android:autofillHints="" />
            </TableRow>
            
            <TableRow>
                <View style="@style/Spacer.Large" /></TableRow>
    
            <TableRow>
                <TextView
                    style="@style/SubHeader"
                    android:text="@string/updated_password"
                    android:layout_span="12"
                    android:labelFor="@id/username"/>
    
            </TableRow>
            
            <TableRow>
                <TextView
                    style="@style/TableRow.Large.Value"
                    android:text="@string/new_password"
                    android:layout_span="6"
                    android:labelFor="@id/newPassword"/>
                
                <EditText
                    style="@style/TableRow.Large.Input"
                    android:id="@+id/newPassword"
                    android:inputType="textPassword"
                    android:layout_span="6"
                    android:autofillHints="" />
            </TableRow>
            
            <TableRow>
                <TextView
                    style="@style/TableRow.Small.Info"
                    android:text="@string/new_password_msg"
                    android:layout_span="12" />
            </TableRow>
    
            <TableRow>
                <TextView
                    style="@style/TableRow.Large.Value"
                    android:text="@string/confirm_password"
                    android:layout_span="6"
                    android:labelFor="@id/passwordConfirm"/>
        
                <EditText
                    style="@style/TableRow.Large.Input"
                    android:id="@+id/passwordConfirm"
                    android:inputType="textPassword"
                    android:layout_span="6"
                    android:autofillHints="" />
            </TableRow>
        
        </TableLayout>
        
        <TextView
            android:id="@+id/errorMessage"
            style="@style/ErrorMessage" />
        
        <View style="@style/Spacer.Large" />
        
        <Button
            android:id="@+id/buttonUpdateAccount"
            style="@style/Button.Action.Confirm.Wide"
            android:text="@string/update_account"
            android:onClick="buttonUpdateAccount" />
        
    </LinearLayout>

</RelativeLayout>
